fixed search input underline too low

--- a/reactClient/components/HeaderNav/HeaderNav.module.css
+++ b/reactClient/components/HeaderNav/HeaderNav.module.css
@@ -76,6 +76,8 @@
     font-weight: 600;
     outline: none;
     width: 100%;
+    padding: 0;
+    margin: 0;
     overflow: visible; /*So that the underline shows up*/
 }
 
